--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -33,7 +33,7 @@
 
 body {
   /* background: var(--background); */
-  color: var(--foreground);
+  color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
